--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,19 @@
+# Nome da aplicação
 spring.application.name=Reclame-Saude
-
 
 # Configurações da conexão com o banco de dados Oracle
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 spring.datasource.username=SYSTEM
 spring.datasource.password=132435
 
-
+# Configurações do JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+# Configurações de erro
 server.error.include-message=always
 server.error.include-stacktrace=always
 server.error.include-binding-errors=always
+
+
+
