--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,5 +15,10 @@ server.error.include-message=always
 server.error.include-stacktrace=always
 server.error.include-binding-errors=always
 
+#Configurações do Spring Security
+spring.security.user.name=charles
+spring.security.user.password=123456
+
+
 
 
